# stratego-cpp

./: CMakeLists.txt  main.cpp
src/: Board.cpp  Board.h
src/GameController/: GameController.cpp  GameController.h
src/GameManager/: GameManager.cpp  GameManager.h
src/TextureManager/: TextureManager.cpp  TextureManager.h
src/game/: Board.cpp  Board.h  Player.cpp  Player.h
src/pieces/: bomb.h  flag.h  miner.h  normalPiece.h  piece.h  scout.h  spy.h
